# PhotoShare

./: .env  .gitignore  docker-compose.yaml  fix_db.py  main.py  pyproject.toml  requirements.txt
PhotoShare/: .env  main.py  pyproject.toml  requirements.txt
PhotoShare/alembic/: env.py  versions
PhotoShare/src/database/: db.py
PhotoShare/src/entity/: models.py
PhotoShare/src/photoshare/: main.py  models.py  schemas.py
PhotoShare/src/photoshare/routes/: comments.py  photos.py
alembic/: env.py
alembic/versions/: 8f693c8a0d9b_add_photos_table.py  bc191315d3a1_init.py
src/conf/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
src/photos/: models.py  routes.py  schemas.py
src/repository/: photos.py  tags.py  users.py
src/routes/: admin.py  auth.py  comments.py  photo.py  photos.py  profile.py  users.py
src/schemas/: comments.py  photo.py  user.py
src/services/: auth.py  cloudinary_service.py  dependencies.py  email.py  photos.py
