[project]
name = "photoshare"
version = "0.1.0"
description = ""
authors = [
    {name = "Magnteo",email = "bogdanserg48@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy==2.0.45",
    "alembic==1.17.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "asyncpg (>=0.31.0,<0.32.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)"
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
